--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "dependencies": {
     "gatsby": "^5.13.7",
     "gatsby-plugin-layout": "^4.13.1",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-remark-images": "^7.13.2",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-remark": "^6.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
