--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "gatsby": "^5.13.7",
     "gatsby-plugin-layout": "^4.13.1",
+    "gatsby-plugin-react-redux": "^1.1.0",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-remark-images": "^7.13.2",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   }
 }
